<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hitick</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up_details">SignUpDetailsActivity</string>
    <string name="title_activity_sign_in_details">SignInDetailsActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Login Activity Resources -->
    <string name="login_button_signup">Sign Up</string>
    <string name="login_button_signin">Sign In</string>

    <!-- SignUp Dialog Resources -->
    <string name="signup_first_name">First Name</string>
    <string name="signup_last_name">Last Name</string>
    <string name="signup_email">Email</string>
    <string name="signup_mobile">Mobile</string>
    <string name="signup_button_register">Sign Up</string>
    <string name="signup_passsword">Password</string>

    <!-- Keys for storing data at the time of SignUp-->
    <string name="KEY_PREFERENCE_SIGNUP_FIRST_NAME">KEY_SIGNUP_FIRST_NAME</string>
    <string name="KEY_PREFERENCE_SIGNUP_LAST_NAME">KEY_SIGNUP_LAST_NAME</string>
    <string name="KEY_PREFERENCE_SIGNUP_EMAIL_ID">KEY_SIGNUP_EMAIL_ID</string>
    <string name="KEY_PREFERENCE_SIGNUP_MOBILE_NUMBER">KEY_SIGNUP_MOBILE_NUMBER</string>
    <string name="KEY_PREFERENCE_SIGNUP_PASSWORD">KEY_SIGNUP_PASSWORD</string>

    <!-- Keys for storing data at the time of SignIn-->
    <string name="KEY_PREFERENCE_SIGNIN_MOBILE_NUMBER">KEY_SIGNIN_MOBILE_NUMBER</string>
    <string name="KEY_PREFERENCE_SIGNIN_PASSWORD">KEY_SIGNIN_PASSWORD</string>

    <!-- Keys for storing mobile verification data -->
    <string name="KEY_VERIFICATION_CODE">KEY_VERIFICATION_CODE</string>
    <string name="KEY_VERIFICATION_LAST_SAVE_TIME">KEY_LAST_SAVE_TIME</string>

    <!-- Key for storing the GCM Registration Token for this device -->
    <string name="KEY_PREFERENCE_GCM_TOKEN">KEY_GCM_TOKEN</string>

    <!-- GCM sender id for registration on GCM -->
    <string name="GCM_SENDER_ID">51261057929</string>

    <!-- Keys for JSON Post Object send to server during Sign In -->
    <string name="KEY_SIGNIN_JSON_MOBILE">mobile_number</string>
    <string name="KEY_SIGNIN_JSON_PASSWORD">password</string>
    <string name="KEY_SIGNIN_JSON_GCM_TOKEN">regToken</string>

    <!-- Keys for JSON Post Object send to server during Sign Up -->
    <string name="KEY_SIGNUP_JSON_FIRST_NAME">firstname</string>
    <string name="KEY_SIGNUP_JSON_LAST_NAME">lastname</string>
    <string name="KEY_SIGNUP_JSON_MOBILE">mobile_number</string>
    <string name="KEY_SIGNUP_JSON__PASSWORD">password</string>
    <string name="KEY_SIGNUP_JSON_EMAIL">email</string>

    <!-- Urls to communicate with the server -->
    <!-- Sign In / Sign Up Urls -->
    <string name="URL_SIGN_IN">http://192.168.1.11:3000/api/v1/login</string>
    <string name="URL_SIGN_UP">http://192.168.1.11:3000/api/v1/signup</string>
    <string name="URL_FECTH_LATEST_POLL">http://192.168.1.11:3000/api/v1/poll/past</string>
    <string name="URL_DETAILS"></string>


    <!-- Keys for storing the details of the currently active user -->
    <string name="KEY_CURRENT_USER_ID">KEY_CURRENT_USER_ID</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
