<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hitick.app.Fragments.SignInDetailsFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etMobile"
        android:hint="@string/signup_mobile"
        android:paddingTop="@dimen/signup_editText_padding"
        android:paddingBottom="@dimen/signup_editText_padding"
        android:paddingLeft="@dimen/signup_editText_padding"
        android:textSize="@dimen/signup_page_font_size"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:hint="@string/signup_passsword"
        android:paddingTop="@dimen/signup_editText_padding"
        android:paddingBottom="@dimen/signup_editText_padding"
        android:paddingLeft="@dimen/signup_editText_padding"
        android:textSize="@dimen/signup_page_font_size"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bSignIn"
        android:text="@string/login_button_signin"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/signup_button_margin"/>

</LinearLayout>
